# chatbot

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  anthropic_streaming_demo.py  docker-compose.yaml
.github/: copilot-instructions.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  test_api.py  test_crudl_api.py
backend/app/: app.py  entrypoint  nginx.conf  serve.py
backend/app/helpers/: __init__.py  db.py  json_encoder.py  llm.py  logger.py  schemas.py  setup_user.py
backend/app/helpers/mcp/: __init__.py  schemas.py
backend/app/routes/: __init__.py  agent_profiles.py  conversations.py  healthcheck.py  instructions.py  listtools.py  profiles.py  projects.py  users.py
backend/src/: app.py  entrypoint  nginx.conf  serve.py
backend/src/helpers/: __init__.py  db.py  json_encoder.py  llm.py  logger.py  schema.py  schemas.py  setup_user.py
backend/src/routes/: __init__.py  agent_profiles.py  chat.py  conversations.py  healthcheck.py  instructions.py  projects.py  users.py
frontend/: .prettierignore  .prettierrc.json  Dockerfile  components.json  entrypoint  nginx.conf  package.json  serve  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/assets/: truncate-gradient-text.css
frontend/src/components/: ChatArea.tsx  Layout.tsx  Navigation.tsx  NewChat.tsx  Sidebar.tsx  UserInfo.tsx
frontend/src/hooks/: ChatLogicContext.tsx  useChatLogic.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: About.tsx  Agent.tsx  Chat.tsx  Home.tsx  Settings.tsx  index.ts
mcp/: Dockerfile  pyproject.toml
mcp/app/: app.py  nginx.conf  serve.py
mcp/app/auth/: __init__.py  oauth.py
mcp/app/helpers/: __init__.py  encoder.py  exceptions.py  logger.py  registry.py  schemas.py
mcp/app/routes/: healthcheck.py  mcp.py
mcp/app/tools/: __init__.py  math.py
